parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> block
Rule 2     block -> constDecl varDecl procDecl statement
Rule 3     constDecl -> INICIO constAssignmentList PUNTOCOMA
Rule 4     constDecl -> empty
Rule 5     constAssignmentList -> TEXTO IDENT DOSPUNTOS PARENTESIS IDENT PARENTESIS PUNTO
Rule 6     constAssignmentList -> constAssignmentList IMPORTA CORIZQ IDENT CORDER PUNTO
Rule 7     constAssignmentList -> constAssignmentList CONST IDENT ASIGNAR IDENT PUNTO
Rule 8     constAssignmentList -> constAssignmentList VAR IDENT ASIGNAR NUMERO PUNTO
Rule 9     constAssignmentList -> constAssignmentList NOTA IDENT PARIZQ IDENT COMA NUMERO PARDER PUNTO
Rule 10    constAssignmentList -> constAssignmentList REPRODUCIR PARIZQ IDENT COMA DURACION PARDER PUNTO
Rule 11    constAssignmentList -> constAssignmentList REPRODUCIR PARIZQ IDENT COMA NUMERO PARDER PUNTO
Rule 12    constAssignmentList -> constAssignmentList REPRODUCIR PARIZQ IDENT COMA NUMERO POR IDENT PARDER PUNTO
Rule 13    constAssignmentList -> constAssignmentList SILENCIO PARIZQ NUMERO PARDER PUNTO
Rule 14    constAssignmentList -> constAssignmentList INCREMENTA PARIZQ IDENT AUMENT NUMERO PARDER PUNTO
Rule 15    constAssignmentList -> constAssignmentList MUESTRA PARIZQ TEXTO PARDER PUNTO
Rule 16    constAssignmentList -> constAssignmentList DURACION ASIGNAR NUMERO PUNTO
Rule 17    constAssignmentList -> constAssignmentList FIN PUNTOCOMA
Rule 18    varDecl -> empty
Rule 19    procDecl -> empty
Rule 20    statement -> empty
Rule 21    empty -> <empty>

Terminals, with rules where they appear

ASIGNAR              : 7 8 16
AUMENT               : 14
COMA                 : 9 10 11 12
CONST                : 7
CORDER               : 6
CORIZQ               : 6
DOSPUNTOS            : 5
DURACION             : 10 16
FIN                  : 17
IDENT                : 5 5 6 7 7 8 9 9 10 11 12 12 14
IMPORTA              : 6
INCREMENTA           : 14
INICIO               : 3
MUESTRA              : 15
NOTA                 : 9
NUMERO               : 8 9 11 12 13 14 16
PARDER               : 9 10 11 12 13 14 15
PARENTESIS           : 5 5
PARIZQ               : 9 10 11 12 13 14 15
POR                  : 12
PUNTO                : 5 6 7 8 9 10 11 12 13 14 15 16
PUNTOCOMA            : 3 17
REPRODUCIR           : 10 11 12
SILENCIO             : 13
TEXTO                : 5 15
VAR                  : 8
error                : 

Nonterminals, with rules where they appear

block                : 1
constAssignmentList  : 3 6 7 8 9 10 11 12 13 14 15 16 17
constDecl            : 2
empty                : 4 18 19 20
procDecl             : 2
program              : 0
statement            : 2
varDecl              : 2

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . block
    (2) block -> . constDecl varDecl procDecl statement
    (3) constDecl -> . INICIO constAssignmentList PUNTOCOMA
    (4) constDecl -> . empty
    (21) empty -> .

    INICIO          shift and go to state 4
    $end            reduce using rule 21 (empty -> .)

    program                        shift and go to state 1
    block                          shift and go to state 2
    constDecl                      shift and go to state 3
    empty                          shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> block .

    $end            reduce using rule 1 (program -> block .)


state 3

    (2) block -> constDecl . varDecl procDecl statement
    (18) varDecl -> . empty
    (21) empty -> .

    $end            reduce using rule 21 (empty -> .)

    varDecl                        shift and go to state 6
    empty                          shift and go to state 7

state 4

    (3) constDecl -> INICIO . constAssignmentList PUNTOCOMA
    (5) constAssignmentList -> . TEXTO IDENT DOSPUNTOS PARENTESIS IDENT PARENTESIS PUNTO
    (6) constAssignmentList -> . constAssignmentList IMPORTA CORIZQ IDENT CORDER PUNTO
    (7) constAssignmentList -> . constAssignmentList CONST IDENT ASIGNAR IDENT PUNTO
    (8) constAssignmentList -> . constAssignmentList VAR IDENT ASIGNAR NUMERO PUNTO
    (9) constAssignmentList -> . constAssignmentList NOTA IDENT PARIZQ IDENT COMA NUMERO PARDER PUNTO
    (10) constAssignmentList -> . constAssignmentList REPRODUCIR PARIZQ IDENT COMA DURACION PARDER PUNTO
    (11) constAssignmentList -> . constAssignmentList REPRODUCIR PARIZQ IDENT COMA NUMERO PARDER PUNTO
    (12) constAssignmentList -> . constAssignmentList REPRODUCIR PARIZQ IDENT COMA NUMERO POR IDENT PARDER PUNTO
    (13) constAssignmentList -> . constAssignmentList SILENCIO PARIZQ NUMERO PARDER PUNTO
    (14) constAssignmentList -> . constAssignmentList INCREMENTA PARIZQ IDENT AUMENT NUMERO PARDER PUNTO
    (15) constAssignmentList -> . constAssignmentList MUESTRA PARIZQ TEXTO PARDER PUNTO
    (16) constAssignmentList -> . constAssignmentList DURACION ASIGNAR NUMERO PUNTO
    (17) constAssignmentList -> . constAssignmentList FIN PUNTOCOMA

    TEXTO           shift and go to state 9

    constAssignmentList            shift and go to state 8

state 5

    (4) constDecl -> empty .

    $end            reduce using rule 4 (constDecl -> empty .)


state 6

    (2) block -> constDecl varDecl . procDecl statement
    (19) procDecl -> . empty
    (21) empty -> .

    $end            reduce using rule 21 (empty -> .)

    procDecl                       shift and go to state 10
    empty                          shift and go to state 11

state 7

    (18) varDecl -> empty .

    $end            reduce using rule 18 (varDecl -> empty .)


state 8

    (3) constDecl -> INICIO constAssignmentList . PUNTOCOMA
    (6) constAssignmentList -> constAssignmentList . IMPORTA CORIZQ IDENT CORDER PUNTO
    (7) constAssignmentList -> constAssignmentList . CONST IDENT ASIGNAR IDENT PUNTO
    (8) constAssignmentList -> constAssignmentList . VAR IDENT ASIGNAR NUMERO PUNTO
    (9) constAssignmentList -> constAssignmentList . NOTA IDENT PARIZQ IDENT COMA NUMERO PARDER PUNTO
    (10) constAssignmentList -> constAssignmentList . REPRODUCIR PARIZQ IDENT COMA DURACION PARDER PUNTO
    (11) constAssignmentList -> constAssignmentList . REPRODUCIR PARIZQ IDENT COMA NUMERO PARDER PUNTO
    (12) constAssignmentList -> constAssignmentList . REPRODUCIR PARIZQ IDENT COMA NUMERO POR IDENT PARDER PUNTO
    (13) constAssignmentList -> constAssignmentList . SILENCIO PARIZQ NUMERO PARDER PUNTO
    (14) constAssignmentList -> constAssignmentList . INCREMENTA PARIZQ IDENT AUMENT NUMERO PARDER PUNTO
    (15) constAssignmentList -> constAssignmentList . MUESTRA PARIZQ TEXTO PARDER PUNTO
    (16) constAssignmentList -> constAssignmentList . DURACION ASIGNAR NUMERO PUNTO
    (17) constAssignmentList -> constAssignmentList . FIN PUNTOCOMA

    PUNTOCOMA       shift and go to state 12
    IMPORTA         shift and go to state 13
    CONST           shift and go to state 14
    VAR             shift and go to state 15
    NOTA            shift and go to state 16
    REPRODUCIR      shift and go to state 17
    SILENCIO        shift and go to state 19
    INCREMENTA      shift and go to state 20
    MUESTRA         shift and go to state 21
    DURACION        shift and go to state 18
    FIN             shift and go to state 22


state 9

    (5) constAssignmentList -> TEXTO . IDENT DOSPUNTOS PARENTESIS IDENT PARENTESIS PUNTO

    IDENT           shift and go to state 23


state 10

    (2) block -> constDecl varDecl procDecl . statement
    (20) statement -> . empty
    (21) empty -> .

    $end            reduce using rule 21 (empty -> .)

    statement                      shift and go to state 24
    empty                          shift and go to state 25

state 11

    (19) procDecl -> empty .

    $end            reduce using rule 19 (procDecl -> empty .)


state 12

    (3) constDecl -> INICIO constAssignmentList PUNTOCOMA .

    $end            reduce using rule 3 (constDecl -> INICIO constAssignmentList PUNTOCOMA .)


state 13

    (6) constAssignmentList -> constAssignmentList IMPORTA . CORIZQ IDENT CORDER PUNTO

    CORIZQ          shift and go to state 26


state 14

    (7) constAssignmentList -> constAssignmentList CONST . IDENT ASIGNAR IDENT PUNTO

    IDENT           shift and go to state 27


state 15

    (8) constAssignmentList -> constAssignmentList VAR . IDENT ASIGNAR NUMERO PUNTO

    IDENT           shift and go to state 28


state 16

    (9) constAssignmentList -> constAssignmentList NOTA . IDENT PARIZQ IDENT COMA NUMERO PARDER PUNTO

    IDENT           shift and go to state 29


state 17

    (10) constAssignmentList -> constAssignmentList REPRODUCIR . PARIZQ IDENT COMA DURACION PARDER PUNTO
    (11) constAssignmentList -> constAssignmentList REPRODUCIR . PARIZQ IDENT COMA NUMERO PARDER PUNTO
    (12) constAssignmentList -> constAssignmentList REPRODUCIR . PARIZQ IDENT COMA NUMERO POR IDENT PARDER PUNTO

    PARIZQ          shift and go to state 30


state 18

    (16) constAssignmentList -> constAssignmentList DURACION . ASIGNAR NUMERO PUNTO

    ASIGNAR         shift and go to state 31


state 19

    (13) constAssignmentList -> constAssignmentList SILENCIO . PARIZQ NUMERO PARDER PUNTO

    PARIZQ          shift and go to state 32


state 20

    (14) constAssignmentList -> constAssignmentList INCREMENTA . PARIZQ IDENT AUMENT NUMERO PARDER PUNTO

    PARIZQ          shift and go to state 33


state 21

    (15) constAssignmentList -> constAssignmentList MUESTRA . PARIZQ TEXTO PARDER PUNTO

    PARIZQ          shift and go to state 34


state 22

    (17) constAssignmentList -> constAssignmentList FIN . PUNTOCOMA

    PUNTOCOMA       shift and go to state 35


state 23

    (5) constAssignmentList -> TEXTO IDENT . DOSPUNTOS PARENTESIS IDENT PARENTESIS PUNTO

    DOSPUNTOS       shift and go to state 36


state 24

    (2) block -> constDecl varDecl procDecl statement .

    $end            reduce using rule 2 (block -> constDecl varDecl procDecl statement .)


state 25

    (20) statement -> empty .

    $end            reduce using rule 20 (statement -> empty .)


state 26

    (6) constAssignmentList -> constAssignmentList IMPORTA CORIZQ . IDENT CORDER PUNTO

    IDENT           shift and go to state 37


state 27

    (7) constAssignmentList -> constAssignmentList CONST IDENT . ASIGNAR IDENT PUNTO

    ASIGNAR         shift and go to state 38


state 28

    (8) constAssignmentList -> constAssignmentList VAR IDENT . ASIGNAR NUMERO PUNTO

    ASIGNAR         shift and go to state 39


state 29

    (9) constAssignmentList -> constAssignmentList NOTA IDENT . PARIZQ IDENT COMA NUMERO PARDER PUNTO

    PARIZQ          shift and go to state 40


state 30

    (10) constAssignmentList -> constAssignmentList REPRODUCIR PARIZQ . IDENT COMA DURACION PARDER PUNTO
    (11) constAssignmentList -> constAssignmentList REPRODUCIR PARIZQ . IDENT COMA NUMERO PARDER PUNTO
    (12) constAssignmentList -> constAssignmentList REPRODUCIR PARIZQ . IDENT COMA NUMERO POR IDENT PARDER PUNTO

    IDENT           shift and go to state 41


state 31

    (16) constAssignmentList -> constAssignmentList DURACION ASIGNAR . NUMERO PUNTO

    NUMERO          shift and go to state 42


state 32

    (13) constAssignmentList -> constAssignmentList SILENCIO PARIZQ . NUMERO PARDER PUNTO

    NUMERO          shift and go to state 43


state 33

    (14) constAssignmentList -> constAssignmentList INCREMENTA PARIZQ . IDENT AUMENT NUMERO PARDER PUNTO

    IDENT           shift and go to state 44


state 34

    (15) constAssignmentList -> constAssignmentList MUESTRA PARIZQ . TEXTO PARDER PUNTO

    TEXTO           shift and go to state 45


state 35

    (17) constAssignmentList -> constAssignmentList FIN PUNTOCOMA .

    PUNTOCOMA       reduce using rule 17 (constAssignmentList -> constAssignmentList FIN PUNTOCOMA .)
    IMPORTA         reduce using rule 17 (constAssignmentList -> constAssignmentList FIN PUNTOCOMA .)
    CONST           reduce using rule 17 (constAssignmentList -> constAssignmentList FIN PUNTOCOMA .)
    VAR             reduce using rule 17 (constAssignmentList -> constAssignmentList FIN PUNTOCOMA .)
    NOTA            reduce using rule 17 (constAssignmentList -> constAssignmentList FIN PUNTOCOMA .)
    REPRODUCIR      reduce using rule 17 (constAssignmentList -> constAssignmentList FIN PUNTOCOMA .)
    SILENCIO        reduce using rule 17 (constAssignmentList -> constAssignmentList FIN PUNTOCOMA .)
    INCREMENTA      reduce using rule 17 (constAssignmentList -> constAssignmentList FIN PUNTOCOMA .)
    MUESTRA         reduce using rule 17 (constAssignmentList -> constAssignmentList FIN PUNTOCOMA .)
    DURACION        reduce using rule 17 (constAssignmentList -> constAssignmentList FIN PUNTOCOMA .)
    FIN             reduce using rule 17 (constAssignmentList -> constAssignmentList FIN PUNTOCOMA .)


state 36

    (5) constAssignmentList -> TEXTO IDENT DOSPUNTOS . PARENTESIS IDENT PARENTESIS PUNTO

    PARENTESIS      shift and go to state 46


state 37

    (6) constAssignmentList -> constAssignmentList IMPORTA CORIZQ IDENT . CORDER PUNTO

    CORDER          shift and go to state 47


state 38

    (7) constAssignmentList -> constAssignmentList CONST IDENT ASIGNAR . IDENT PUNTO

    IDENT           shift and go to state 48


state 39

    (8) constAssignmentList -> constAssignmentList VAR IDENT ASIGNAR . NUMERO PUNTO

    NUMERO          shift and go to state 49


state 40

    (9) constAssignmentList -> constAssignmentList NOTA IDENT PARIZQ . IDENT COMA NUMERO PARDER PUNTO

    IDENT           shift and go to state 50


state 41

    (10) constAssignmentList -> constAssignmentList REPRODUCIR PARIZQ IDENT . COMA DURACION PARDER PUNTO
    (11) constAssignmentList -> constAssignmentList REPRODUCIR PARIZQ IDENT . COMA NUMERO PARDER PUNTO
    (12) constAssignmentList -> constAssignmentList REPRODUCIR PARIZQ IDENT . COMA NUMERO POR IDENT PARDER PUNTO

    COMA            shift and go to state 51


state 42

    (16) constAssignmentList -> constAssignmentList DURACION ASIGNAR NUMERO . PUNTO

    PUNTO           shift and go to state 52


state 43

    (13) constAssignmentList -> constAssignmentList SILENCIO PARIZQ NUMERO . PARDER PUNTO

    PARDER          shift and go to state 53


state 44

    (14) constAssignmentList -> constAssignmentList INCREMENTA PARIZQ IDENT . AUMENT NUMERO PARDER PUNTO

    AUMENT          shift and go to state 54


state 45

    (15) constAssignmentList -> constAssignmentList MUESTRA PARIZQ TEXTO . PARDER PUNTO

    PARDER          shift and go to state 55


state 46

    (5) constAssignmentList -> TEXTO IDENT DOSPUNTOS PARENTESIS . IDENT PARENTESIS PUNTO

    IDENT           shift and go to state 56


state 47

    (6) constAssignmentList -> constAssignmentList IMPORTA CORIZQ IDENT CORDER . PUNTO

    PUNTO           shift and go to state 57


state 48

    (7) constAssignmentList -> constAssignmentList CONST IDENT ASIGNAR IDENT . PUNTO

    PUNTO           shift and go to state 58


state 49

    (8) constAssignmentList -> constAssignmentList VAR IDENT ASIGNAR NUMERO . PUNTO

    PUNTO           shift and go to state 59


state 50

    (9) constAssignmentList -> constAssignmentList NOTA IDENT PARIZQ IDENT . COMA NUMERO PARDER PUNTO

    COMA            shift and go to state 60


state 51

    (10) constAssignmentList -> constAssignmentList REPRODUCIR PARIZQ IDENT COMA . DURACION PARDER PUNTO
    (11) constAssignmentList -> constAssignmentList REPRODUCIR PARIZQ IDENT COMA . NUMERO PARDER PUNTO
    (12) constAssignmentList -> constAssignmentList REPRODUCIR PARIZQ IDENT COMA . NUMERO POR IDENT PARDER PUNTO

    DURACION        shift and go to state 61
    NUMERO          shift and go to state 62


state 52

    (16) constAssignmentList -> constAssignmentList DURACION ASIGNAR NUMERO PUNTO .

    PUNTOCOMA       reduce using rule 16 (constAssignmentList -> constAssignmentList DURACION ASIGNAR NUMERO PUNTO .)
    IMPORTA         reduce using rule 16 (constAssignmentList -> constAssignmentList DURACION ASIGNAR NUMERO PUNTO .)
    CONST           reduce using rule 16 (constAssignmentList -> constAssignmentList DURACION ASIGNAR NUMERO PUNTO .)
    VAR             reduce using rule 16 (constAssignmentList -> constAssignmentList DURACION ASIGNAR NUMERO PUNTO .)
    NOTA            reduce using rule 16 (constAssignmentList -> constAssignmentList DURACION ASIGNAR NUMERO PUNTO .)
    REPRODUCIR      reduce using rule 16 (constAssignmentList -> constAssignmentList DURACION ASIGNAR NUMERO PUNTO .)
    SILENCIO        reduce using rule 16 (constAssignmentList -> constAssignmentList DURACION ASIGNAR NUMERO PUNTO .)
    INCREMENTA      reduce using rule 16 (constAssignmentList -> constAssignmentList DURACION ASIGNAR NUMERO PUNTO .)
    MUESTRA         reduce using rule 16 (constAssignmentList -> constAssignmentList DURACION ASIGNAR NUMERO PUNTO .)
    DURACION        reduce using rule 16 (constAssignmentList -> constAssignmentList DURACION ASIGNAR NUMERO PUNTO .)
    FIN             reduce using rule 16 (constAssignmentList -> constAssignmentList DURACION ASIGNAR NUMERO PUNTO .)


state 53

    (13) constAssignmentList -> constAssignmentList SILENCIO PARIZQ NUMERO PARDER . PUNTO

    PUNTO           shift and go to state 63


state 54

    (14) constAssignmentList -> constAssignmentList INCREMENTA PARIZQ IDENT AUMENT . NUMERO PARDER PUNTO

    NUMERO          shift and go to state 64


state 55

    (15) constAssignmentList -> constAssignmentList MUESTRA PARIZQ TEXTO PARDER . PUNTO

    PUNTO           shift and go to state 65


state 56

    (5) constAssignmentList -> TEXTO IDENT DOSPUNTOS PARENTESIS IDENT . PARENTESIS PUNTO

    PARENTESIS      shift and go to state 66


state 57

    (6) constAssignmentList -> constAssignmentList IMPORTA CORIZQ IDENT CORDER PUNTO .

    PUNTOCOMA       reduce using rule 6 (constAssignmentList -> constAssignmentList IMPORTA CORIZQ IDENT CORDER PUNTO .)
    IMPORTA         reduce using rule 6 (constAssignmentList -> constAssignmentList IMPORTA CORIZQ IDENT CORDER PUNTO .)
    CONST           reduce using rule 6 (constAssignmentList -> constAssignmentList IMPORTA CORIZQ IDENT CORDER PUNTO .)
    VAR             reduce using rule 6 (constAssignmentList -> constAssignmentList IMPORTA CORIZQ IDENT CORDER PUNTO .)
    NOTA            reduce using rule 6 (constAssignmentList -> constAssignmentList IMPORTA CORIZQ IDENT CORDER PUNTO .)
    REPRODUCIR      reduce using rule 6 (constAssignmentList -> constAssignmentList IMPORTA CORIZQ IDENT CORDER PUNTO .)
    SILENCIO        reduce using rule 6 (constAssignmentList -> constAssignmentList IMPORTA CORIZQ IDENT CORDER PUNTO .)
    INCREMENTA      reduce using rule 6 (constAssignmentList -> constAssignmentList IMPORTA CORIZQ IDENT CORDER PUNTO .)
    MUESTRA         reduce using rule 6 (constAssignmentList -> constAssignmentList IMPORTA CORIZQ IDENT CORDER PUNTO .)
    DURACION        reduce using rule 6 (constAssignmentList -> constAssignmentList IMPORTA CORIZQ IDENT CORDER PUNTO .)
    FIN             reduce using rule 6 (constAssignmentList -> constAssignmentList IMPORTA CORIZQ IDENT CORDER PUNTO .)


state 58

    (7) constAssignmentList -> constAssignmentList CONST IDENT ASIGNAR IDENT PUNTO .

    PUNTOCOMA       reduce using rule 7 (constAssignmentList -> constAssignmentList CONST IDENT ASIGNAR IDENT PUNTO .)
    IMPORTA         reduce using rule 7 (constAssignmentList -> constAssignmentList CONST IDENT ASIGNAR IDENT PUNTO .)
    CONST           reduce using rule 7 (constAssignmentList -> constAssignmentList CONST IDENT ASIGNAR IDENT PUNTO .)
    VAR             reduce using rule 7 (constAssignmentList -> constAssignmentList CONST IDENT ASIGNAR IDENT PUNTO .)
    NOTA            reduce using rule 7 (constAssignmentList -> constAssignmentList CONST IDENT ASIGNAR IDENT PUNTO .)
    REPRODUCIR      reduce using rule 7 (constAssignmentList -> constAssignmentList CONST IDENT ASIGNAR IDENT PUNTO .)
    SILENCIO        reduce using rule 7 (constAssignmentList -> constAssignmentList CONST IDENT ASIGNAR IDENT PUNTO .)
    INCREMENTA      reduce using rule 7 (constAssignmentList -> constAssignmentList CONST IDENT ASIGNAR IDENT PUNTO .)
    MUESTRA         reduce using rule 7 (constAssignmentList -> constAssignmentList CONST IDENT ASIGNAR IDENT PUNTO .)
    DURACION        reduce using rule 7 (constAssignmentList -> constAssignmentList CONST IDENT ASIGNAR IDENT PUNTO .)
    FIN             reduce using rule 7 (constAssignmentList -> constAssignmentList CONST IDENT ASIGNAR IDENT PUNTO .)


state 59

    (8) constAssignmentList -> constAssignmentList VAR IDENT ASIGNAR NUMERO PUNTO .

    PUNTOCOMA       reduce using rule 8 (constAssignmentList -> constAssignmentList VAR IDENT ASIGNAR NUMERO PUNTO .)
    IMPORTA         reduce using rule 8 (constAssignmentList -> constAssignmentList VAR IDENT ASIGNAR NUMERO PUNTO .)
    CONST           reduce using rule 8 (constAssignmentList -> constAssignmentList VAR IDENT ASIGNAR NUMERO PUNTO .)
    VAR             reduce using rule 8 (constAssignmentList -> constAssignmentList VAR IDENT ASIGNAR NUMERO PUNTO .)
    NOTA            reduce using rule 8 (constAssignmentList -> constAssignmentList VAR IDENT ASIGNAR NUMERO PUNTO .)
    REPRODUCIR      reduce using rule 8 (constAssignmentList -> constAssignmentList VAR IDENT ASIGNAR NUMERO PUNTO .)
    SILENCIO        reduce using rule 8 (constAssignmentList -> constAssignmentList VAR IDENT ASIGNAR NUMERO PUNTO .)
    INCREMENTA      reduce using rule 8 (constAssignmentList -> constAssignmentList VAR IDENT ASIGNAR NUMERO PUNTO .)
    MUESTRA         reduce using rule 8 (constAssignmentList -> constAssignmentList VAR IDENT ASIGNAR NUMERO PUNTO .)
    DURACION        reduce using rule 8 (constAssignmentList -> constAssignmentList VAR IDENT ASIGNAR NUMERO PUNTO .)
    FIN             reduce using rule 8 (constAssignmentList -> constAssignmentList VAR IDENT ASIGNAR NUMERO PUNTO .)


state 60

    (9) constAssignmentList -> constAssignmentList NOTA IDENT PARIZQ IDENT COMA . NUMERO PARDER PUNTO

    NUMERO          shift and go to state 67


state 61

    (10) constAssignmentList -> constAssignmentList REPRODUCIR PARIZQ IDENT COMA DURACION . PARDER PUNTO

    PARDER          shift and go to state 68


state 62

    (11) constAssignmentList -> constAssignmentList REPRODUCIR PARIZQ IDENT COMA NUMERO . PARDER PUNTO
    (12) constAssignmentList -> constAssignmentList REPRODUCIR PARIZQ IDENT COMA NUMERO . POR IDENT PARDER PUNTO

    PARDER          shift and go to state 69
    POR             shift and go to state 70


state 63

    (13) constAssignmentList -> constAssignmentList SILENCIO PARIZQ NUMERO PARDER PUNTO .

    PUNTOCOMA       reduce using rule 13 (constAssignmentList -> constAssignmentList SILENCIO PARIZQ NUMERO PARDER PUNTO .)
    IMPORTA         reduce using rule 13 (constAssignmentList -> constAssignmentList SILENCIO PARIZQ NUMERO PARDER PUNTO .)
    CONST           reduce using rule 13 (constAssignmentList -> constAssignmentList SILENCIO PARIZQ NUMERO PARDER PUNTO .)
    VAR             reduce using rule 13 (constAssignmentList -> constAssignmentList SILENCIO PARIZQ NUMERO PARDER PUNTO .)
    NOTA            reduce using rule 13 (constAssignmentList -> constAssignmentList SILENCIO PARIZQ NUMERO PARDER PUNTO .)
    REPRODUCIR      reduce using rule 13 (constAssignmentList -> constAssignmentList SILENCIO PARIZQ NUMERO PARDER PUNTO .)
    SILENCIO        reduce using rule 13 (constAssignmentList -> constAssignmentList SILENCIO PARIZQ NUMERO PARDER PUNTO .)
    INCREMENTA      reduce using rule 13 (constAssignmentList -> constAssignmentList SILENCIO PARIZQ NUMERO PARDER PUNTO .)
    MUESTRA         reduce using rule 13 (constAssignmentList -> constAssignmentList SILENCIO PARIZQ NUMERO PARDER PUNTO .)
    DURACION        reduce using rule 13 (constAssignmentList -> constAssignmentList SILENCIO PARIZQ NUMERO PARDER PUNTO .)
    FIN             reduce using rule 13 (constAssignmentList -> constAssignmentList SILENCIO PARIZQ NUMERO PARDER PUNTO .)


state 64

    (14) constAssignmentList -> constAssignmentList INCREMENTA PARIZQ IDENT AUMENT NUMERO . PARDER PUNTO

    PARDER          shift and go to state 71


state 65

    (15) constAssignmentList -> constAssignmentList MUESTRA PARIZQ TEXTO PARDER PUNTO .
